# muf-ci

./: .gitignore  DESCRIPTION.md  Dockerfile  Makefile  README.md  cp_files.sh  muf.opam  pyproject.toml  requirements.txt  setup.sh  siren.opam  siren.py
benchmarks/: Makefile  gen_plans.py  harness.py  statistics.json  veriprop_plot.py  visualize.py
benchmarks/aircraft/: config.json  default.si  template.si
benchmarks/coin/: coin.muf  coin_approx.muf  config.json
benchmarks/coin_gaussian/: config.json
benchmarks/envnoise/: annotated_unsat.si  baseline.si  config.json  config_dynamic.json  default.si  template.si
benchmarks/example/: config.json
benchmarks/example2/: config.json
benchmarks/example3/: config.json
benchmarks/example5/: config.json
benchmarks/examplebad/: config.json
benchmarks/examplegood/: config.json
benchmarks/gaussianmixture/: baseline.si  config.json  gaussianmixture_approx.muf  gaussianmixture_default.muf  gaussianmixture_mu1_exact.muf  gaussianmixture_mu1_exact.si  gaussianmixture_mu1_mu2_theta_exact.muf  (+10 more)
examples/: kalman.si
ocaml/: dune-project
ocaml/src/compiler/: compiler.ml  siren.ml  sirenextern.ml
ocaml/src/lib/: infer_siren.ml  sirenlib.ml  utils.ml
siren/: analyze.py  evaluate.py  grammar.py  inference_plan.py  parser.py  siren.py  utils.py
src/compiler/: analysis.ml  compiler.ml  dune  lexer.mll  mufc.ml  mufextern.ml  parser.mly  siren.ml
test/: envnoise.si  test_analysis.py  test_programs.py  test_run.py
tests/: Makefile  coin.muf  kalman_normal.muf  test_analysis.py  test_run.py  test_ssi.py
(+740 files in other folders)
