(lang dune 2.7)
(name siren)
(version 0.1.0)
(using menhir 2.1)

(generate_opam_files true)

(source (github psg-mit/siren))
(license Apache-2.0)
(authors  "Ellie Cheng"
          "Eric Atkinson"
          "Guillaume Baudart"
          "Louis Mandel"
          "Michael Carbin")
(maintainers "Ellie Cheng")

(package
 (name siren)
 (synopsis "The Siren compiler")
 (description "Compiler, static analysis, and runtime for Siren")
 (depends probzelus))
