(ocamllex lexer)
(menhir
 (modules parser))

(library
 (name sirencompilerlibs)
 (public_name siren.sirencompilerlibs)
 (libraries probzelus compiler-libs)
 (modules :standard \ siren)
 (preprocess (pps ppx_deriving.show ppx_deriving.fold ppx_deriving.map)))

(executable
 (name siren)
 (modules siren)
 (promote (until-clean) (into ../..))
 (libraries compiler-libs.common sirencompilerlibs compiler-libs))

(install
 (package siren)
 (section bin)
 (files (siren.exe as siren)))
